--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 }
