--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:20.0.0'
     implementation 'com.google.firebase:firebase-auth:21.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.firebaseui:firebase-ui-database:7.2.0'
     //iii
 
 }
