--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -15,7 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Firebase3"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".PDFselect"
+            android:exported="false" />
         <activity
             android:name=".UploadMain"
             android:exported="false" />
@@ -27,28 +30,24 @@
         <activity
             android:name=".DoctorList"
             android:exported="false" />
-
         <activity
             android:name=".DoctorDashboard"
             android:exported="false" />
         <activity
             android:name=".userType"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".Uploaddoc"
             android:exported="false" />
         <activity
             android:name=".viewinvoices"
             android:exported="false" />
-
         <activity
             android:name=".viewprofile"
             android:exported="false" />
@@ -72,8 +71,7 @@
             android:exported="false" />
         <activity
             android:name=".RetrievePDFActivity"
-            android:exported="false">
-        </activity>
+            android:exported="false"></activity>
     </application>
 
 </manifest>
