Hrishikesh new comment - QR Generation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".PatientQr"
+            android:exported="false" />
+        <activity
             android:name=".PDFselect"
             android:exported="false" />
         <activity
@@ -71,7 +74,7 @@
             android:exported="false" />
         <activity
             android:name=".RetrievePDFActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
     </application>
 
 </manifest>
