--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation "androidx.recyclerview:recyclerview:1.2.1"
-    // For control over item selection of both touch and mouse driven selection
     implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
@@ -58,6 +57,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.firebaseui:firebase-ui-database:7.2.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
 
 
 }
