--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,17 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.firebaseui:firebase-ui-database:7.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    def camerax_version = "1.0.1"
+    //implementation "androidx.camera:camera-camera2:$camerax_version"
+    //implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    //implementation "androidx.camera:camera-view:1.0.0-alpha27"
+    //implementation 'com.dynamsoft:dynamsoftbarcodereader:9.0.0@aar'
+    //implementation 'me.dm7.barcodescanner:zxing:1.9'
+
+    //qwerty
+
+
 
 
 }
