--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven{url "https://download2.dynamsoft.com/maven/dbr/aar"}
     }
 }
 rootProject.name = "Firebase3"
