Hrishikesh new comment - Add Patient, QR Scanner

--- a/settings.gradle
+++ b/settings.gradle
@@ -11,7 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-        maven{url "https://download2.dynamsoft.com/maven/dbr/aar"}
+        maven { url 'https://jitpack.io' }
     }
 }
 rootProject.name = "Firebase3"
