--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-database:7.2.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.1.0'
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    implementation 'com.google.zxing:core:3.5.0'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
     def camerax_version = "1.0.1"
     //implementation "androidx.camera:camera-camera2:$camerax_version"
     //implementation "androidx.camera:camera-lifecycle:$camerax_version"
